--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -52,6 +52,7 @@ install:
 - cmd: vcpkg install openssl-windows:x64-windows
 - cmd: vcpkg install botan:x86-windows
 build_script:
+- cmd: vcpkg integration install
 - cmd: testing/appveyor/appveyor_build.bat
 test: off
 artifacts:
