--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -51,6 +51,7 @@ install:
 - cmd: vcpkg install sqlite3:x86-windows
 - cmd: vcpkg install openssl-windows:x64-windows
 - cmd: vcpkg install botan:x86-windows
+- cmd: vcpkg install cppunit:x86-windows
 build_script:
 - cmd: cat C:/Tools/vcpkg/scripts/buildsystems/vcpkg.cmake
 - cmd: vcpkg integrate install
