--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -50,13 +50,14 @@ environment:
 install:
 - cmd: vcpkg install sqlite3:x86-windows
 - cmd: vcpkg install openssl-windows:x64-windows
-- cmd: vcpkg install botan:x86-windows
+- cmd: vcpkg install botan2:x86-windows
 - cmd: vcpkg install cppunit:x86-windows
 build_script:
 - cmd: cat C:/Tools/vcpkg/scripts/buildsystems/vcpkg.cmake
 - cmd: vcpkg integrate install
 - cmd: cmake -DCMAKE_TOOLCHAIN_FILE=C:/Tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DWITH_CRYPTO_BACKEND=%CRYPTO_BACKEND% -DBUILD_TESTS=OFF -DDISABLE_NON_PAGED_MEMORY=ON -DENABLE_GOST=OFF
-- cmd: make all
+- cmd: dir
+- cmd: msbuild
 test: off
 artifacts:
 - path: build/SoftHSMv2-$(Platform)
