--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -59,7 +59,7 @@ build_script:
 - cmd: cmake -DCMAKE_TOOLCHAIN_FILE=C:/Tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DWITH_CRYPTO_BACKEND=%CRYPTO_BACKEND% -DBUILD_TESTS=OFF -DDISABLE_NON_PAGED_MEMORY=ON -DENABLE_GOST=OFF
 - cmd: dir
 - cmd: dir win32
-- cmd: msbuild softhsm2.sln /p:Configuration="Release" /p:Platform="%MSBUILD_PLATFORM%" /p:PlatformToolset=v140 /target:Build
+- cmd: msbuild softhsm2.sln /p:Configuration="Release" /p:PlatformToolset=v140 /target:Build
 test: off
 artifacts:
 - path: build/SoftHSMv2-$(Platform)
