--- a/src/lib/handle_mgr/CMakeLists.txt
+++ b/src/lib/handle_mgr/CMakeLists.txt
@@ -8,6 +8,9 @@ set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}
                  ${PROJECT_SOURCE_DIR}/../pkcs11
                  ${PROJECT_SOURCE_DIR}/../slot_mgr
                  )
+if (WIN32)
+    set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/../win32)
+endif (WIN32)
 
 set(SOURCES HandleManager.cpp
             Handle.cpp
