--- a/src/lib/object_store/CMakeLists.txt
+++ b/src/lib/object_store/CMakeLists.txt
@@ -7,6 +7,9 @@ set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}
                  ${PROJECT_SOURCE_DIR}/../pkcs11
                  ${SQLITE3_INCLUDES}
                  )
+if (WIN32)
+    set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/../win32)
+endif (WIN32)
 
 set(SOURCES Directory.cpp
             File.cpp
