--- a/src/lib/common/CMakeLists.txt
+++ b/src/lib/common/CMakeLists.txt
@@ -15,7 +15,7 @@ set(SOURCES Configuration.cpp
             )
 
 if (WIN32)
-    set(SOURCES ${SOURCES} ../win32/dllmain.cc ../win32/setenv.cpp ../win32/setenv.h ../win32/syslog.cpp ../win32/syslog.hgpu_file2.h ../win32/gpu_file2.cc)
+    set(SOURCES ${SOURCES} ../win32/dllmain.cc ../win32/setenv.cpp ../win32/setenv.h ../win32/syslog.cpp ../win32/gpu_file2.cc)
     set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/../win32)
 endif (WIN32)
 
