append rather than override

--- a/src/bin/util/CMakeLists.txt
+++ b/src/bin/util/CMakeLists.txt
@@ -10,7 +10,7 @@ set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/../common
                  ${SQLITE3_INCLUDES}
                  )
 if (WIN32)
-    set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/../win32)
+    set(INCLUDE_DIRS ${INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/../win32)
 endif (WIN32)
 
 set(SOURCES softhsm2-util.cpp
