--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -23,7 +23,7 @@ set(INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/common
                  ${CRYPTO_INCLUDES}
                  )
 if (WIN32)
-    set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/win32)
+    set(INCLUDE_DIRS ${INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/win32)
 endif (WIN32)
 
 include_directories(${INCLUDE_DIRS})
