--- a/src/lib/data_mgr/test/CMakeLists.txt
+++ b/src/lib/data_mgr/test/CMakeLists.txt
@@ -12,7 +12,7 @@ set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/..
                  ${CRYPTO_INCLUDES}
                  )
 if (WIN32)
-    set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/../../win32)
+    set(INCLUDE_DIRS ${INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/../../win32)
 endif (WIN32)
 
 set(SOURCES datamgrtest.cpp
