--- a/src/lib/object_store/CMakeLists.txt
+++ b/src/lib/object_store/CMakeLists.txt
@@ -8,7 +8,7 @@ set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}
                  ${SQLITE3_INCLUDES}
                  )
 if (WIN32)
-    set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/../win32)
+    set(INCLUDE_DIRS ${INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/../win32)
 endif (WIN32)
 
 set(SOURCES Directory.cpp
