--- a/src/lib/test/CMakeLists.txt
+++ b/src/lib/test/CMakeLists.txt
@@ -7,7 +7,7 @@ set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}
                  ${CPPUNIT_INCLUDES}
                  )
 if (WIN32)
-    set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/../win32)
+    set(INCLUDE_DIRS ${INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/../win32)
 endif (WIN32)
 
 set(SOURCES p11test.cpp
