--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -52,10 +52,10 @@ install:
 - cmd: vcpkg install cppunit:x86-windows
 - cmd: vcpkg install getopt
 - cmd: vcpkg install getopt-win32
+- cmd: vcpkg integrate install
 build_script:
 - cmd: vcpkg integrate install
 - cmd: cmake -DCMAKE_TOOLCHAIN_FILE=C:/Tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DWITH_CRYPTO_BACKEND=%CRYPTO_BACKEND% -DBUILD_TESTS=OFF -DDISABLE_NON_PAGED_MEMORY=ON -DENABLE_GOST=OFF .
-- cmd: msbuild softhsm2.sln /p:Configuration="Release" /p:Platform="Win32" /p:PlatformToolset=v140 /target:Build
 - cmd: IF "%ENV_PLATFORM%"=="x86" ( CD win32\Release ) ELSE ( CD win32\x64\Release)
 test: off
 artifacts:
