--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,9 @@ option(BUILD_TESTS "Compile tests along with libraries" OFF)
 option(DISABLE_NON_PAGED_MEMORY "Disable non-paged memory for secure storage" OFF)
 option(DISABLE_VISIBILITY "Disables and unsets -fvisibility=hidden" OFF)
 option(ENABLE_64bit "Enable 64-bit compiling" OFF)
-option(ENABLE_ECC "Enable support for ECC" ON)
+option(ENABLE_ECC "Enable support for ECC" OFF)
 option(ENABLE_EDDSA "Enable support for EDDSA" OFF)
-option(ENABLE_GOST "Enable support for GOST" ON)
+option(ENABLE_GOST "Enable support for GOST" OFF)
 option(ENABLE_FIPS "Enable support for FIPS 140-2 mode" OFF)
 option(ENABLE_P11_KIT "Enable p11-kit integration" ON)
 option(ENABLE_PEDANTIC "Enable pedantic compile mode" OFF)
