--- a/src/lib/crypto/CMakeLists.txt
+++ b/src/lib/crypto/CMakeLists.txt
@@ -135,6 +135,8 @@ endif(WITH_BOTAN)
 include_directories(${INCLUDE_DIRS})
 
 add_library(${PROJECT_NAME} OBJECT ${SOURCES})
+target_compile_options(${PROJECT_NAME} PRIVATE ${COMPILE_OPTIONS})
+
 # Versions before CMake 3.12 cannot use target_link_libraries on object
 # libraries, a workaround exists in src/lib/CMakeLists.txt.
 if(NOT CMAKE_VERSION VERSION_LESS "3.12")
