--- a/src/lib/slot_mgr/CMakeLists.txt
+++ b/src/lib/slot_mgr/CMakeLists.txt
@@ -17,6 +17,7 @@ set(SOURCES SlotManager.cpp
 include_directories(${INCLUDE_DIRS})
 
 add_library(${PROJECT_NAME} OBJECT ${SOURCES})
+target_compile_options(${PROJECT_NAME} PRIVATE ${COMPILE_OPTIONS})
 
 if(BUILD_TESTS)
     add_subdirectory(test)
