--- a/src/bin/keyconv/CMakeLists.txt
+++ b/src/bin/keyconv/CMakeLists.txt
@@ -21,6 +21,7 @@ endif(WITH_BOTAN)
 include_directories(${INCLUDE_DIRS})
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${CRYPTO_LIBS})
+target_compile_options(${PROJECT_NAME} PRIVATE ${COMPILE_OPTIONS})
 
 install(TARGETS ${PROJECT_NAME}
         DESTINATION ${CMAKE_INSTALL_BINDIR}
