fix add cmake windows compatibility files

--- a/src/bin/util/CMakeLists.txt
+++ b/src/bin/util/CMakeLists.txt
@@ -26,6 +26,12 @@ if(WITH_BOTAN)
     list(APPEND SOURCES softhsm2-util-botan.cpp)
 endif(WITH_BOTAN)
 
+if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+	list(APPEND INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/../../lib/win32
+		${CMAKE_CURRENT_SOURCE_DIR}/../win32)
+	list(APPEND SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../win32/getopt.cpp)
+endif()
+
 include_directories(${INCLUDE_DIRS})
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} softhsm2-static ${CRYPTO_LIBS} ${SQLITE3_LIBS} ${CMAKE_DL_LIBS})
