--- a/src/bin/keyconv/CMakeLists.txt
+++ b/src/bin/keyconv/CMakeLists.txt
@@ -18,6 +18,12 @@ if(WITH_BOTAN)
     list(APPEND SOURCES softhsm2-keyconv-botan.cpp)
 endif(WITH_BOTAN)
 
+if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+	list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../win32)
+	list(APPEND SOURCES ${PROJECT_SOURCE_DIR}/../win32/getopt.cpp)
+	list(APPEND CRYPTO_LIBS "Ws2_32.lib;Crypt32.lib")
+endif()
+
 include_directories(${INCLUDE_DIRS})
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${CRYPTO_LIBS})
