--- a/src/lib/common/CMakeLists.txt
+++ b/src/lib/common/CMakeLists.txt
@@ -14,6 +14,11 @@ set(SOURCES Configuration.cpp
             SimpleConfigLoader.cpp
             )
 
+if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+	list(APPEND SOURCES ${PROJECT_SOURCE_DIR}/../win32/syslog.cpp)
+	list(APPEND INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/../win32)
+ENDIF()
+
 include_directories(${INCLUDE_DIRS})
 
 add_library(${PROJECT_NAME} OBJECT ${SOURCES})
