--- a/src/lib/object_store/CMakeLists.txt
+++ b/src/lib/object_store/CMakeLists.txt
@@ -29,9 +29,11 @@ if(WITH_OBJECTSTORE_BACKEND_DB)
                         )
 endif(WITH_OBJECTSTORE_BACKEND_DB)
 
+if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+	list(APPEND INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/../win32)
+ENDIF()
 
 include_directories(${INCLUDE_DIRS})
-
 add_library(${PROJECT_NAME} OBJECT ${SOURCES})
 target_compile_options(${PROJECT_NAME} PRIVATE ${COMPILE_OPTIONS})
 
