fix set warning level to W4 for softhsm libraries

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -70,6 +70,7 @@ set_target_properties(${PROJECT_NAME}-static
                       PROPERTIES OUTPUT_NAME ${PROJECT_NAME}
                       )
 generate_export_header(${PROJECT_NAME}-static)
+target_compile_options(${PROJECT_NAME}-static PRIVATE ${COMPILE_OPTIONS})
 
 ###############################################################################
 # Shared Library Config
@@ -77,6 +78,7 @@ generate_export_header(${PROJECT_NAME}-static)
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
 target_link_libraries(${PROJECT_NAME} ${STATIC_FILES})
 generate_export_header(${PROJECT_NAME})
+target_compile_options(${PROJECT_NAME} PRIVATE ${COMPILE_OPTIONS})
 
 ###############################################################################
 # Tests
