fix add Softhsm2-negative-mech.conf for p11test

--- a/src/lib/test/CMakeLists.txt
+++ b/src/lib/test/CMakeLists.txt
@@ -51,5 +51,6 @@ set(builddir ${PROJECT_BINARY_DIR})
 configure_file(softhsm2.conf.in softhsm2.conf)
 configure_file(softhsm2-alt.conf.in softhsm2-alt.conf)
 configure_file(softhsm2-reset-on-fork.conf.in softhsm2-reset-on-fork.conf)
+configure_file(softhsm2-negative-mech.conf.in softhsm2-negative-mech.conf)
 configure_file(softhsm2-mech.conf.in softhsm2-mech.conf)
 configure_file(tokens/dummy.in tokens/dummy)
