--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,7 +2,6 @@ version: 2.6.0-{build}
 configuration: Release
 platform:
 - x86
-- x64
 init:
 - ps: >-
     If ($env:Platform -Match "x86") {
@@ -41,6 +40,7 @@ init:
     $env:RELEASE_DIR=Join-Path $env:BUILD_DIR "SoftHSMv2-$env:ENV_PLATFORM"
 
     $env:CONFIGURE_OPTIONS = "$env:CONFIGURE_OPTIONS with-crypto-backend=$env:CRYPTO_BACKEND with-$env:CRYPTO_BACKEND=$env:CRYPTO_PACKAGE_PATH\ with-cppunit=$env:CPPUNIT_PATH\"
+cache: C:/Tools/vcpkg/installed/
 environment:
   matrix:
   - CRYPTO_BACKEND: openssl
@@ -49,22 +49,16 @@ environment:
     ADDITIONAL_CONFIGURE_OPTIONS: disable-eddsa disable-gost with-crypto-backend=botan
 install:
 - cmd: vcpkg install sqlite3:x86-windows
-- cmd: vcpkg install openssl-windows:x64-windows
+- cmd: vcpkg install openssl-windows:x86-windows
 - cmd: vcpkg install botan:x86-windows
 - cmd: vcpkg install cppunit:x86-windows
 - cmd: vcpkg install getopt-win32:x86-windows
 build_script:
 - cmd: vcpkg integrate install
-- cmd: cmake -DCMAKE_TOOLCHAIN_FILE=C:/Tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DWITH_CRYPTO_BACKEND=%CRYPTO_BACKEND% -DBUILD_TESTS=OFF -DDISABLE_NON_PAGED_MEMORY=ON -DENABLE_GOST=OFF .
-- cmd: msbuild softhsm2.sln /p:Configuration="Release" /p:Platform="Win32" /p:PlatformToolset=v140 /target:Build
-- cmd: IF "%ENV_PLATFORM%"=="x86" ( CD win32\Release ) ELSE ( CD win32\x64\Release)
-- cmd: cryptotest.exe
-- cmd: datamgrtest.exe
-- cmd: handlemgrtest.exe
-- cmd: objstoretest.exe
-- cmd: p11test.exe
-- cmd: sessionmgrtest.exe
-- cmd: slotmgrtest.exe
+- cmd: cmake -A Win32 -DCMAKE_TOOLCHAIN_FILE=C:/Tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DWITH_CRYPTO_BACKEND=%CRYPTO_BACKEND% -DBUILD_TESTS=ON  -DDISABLE_NON_PAGED_MEMORY=ON -DENABLE_GOST=OFF -DCPPUNIT_INCLUDE_DIR=C:/Tools/vcpkg/installed/x86-windows/include -DCPPUNIT_LIBRARY=C:/Tools/vcpkg/installed/x86-windows/lib/cppunit.lib .
+- cmd: cmake --build . --config RelWithDebInfo
+- cmd: ctest -C RelWithDebInfo
+- cmd: cmake -DCMAKE_INSTALL_PREFIX=build/SoftHSMv2-$(Platform) -DCMAKE_INSTALL_CONFIG_NAME=RelWithDebInfo -P cmake_install.cmake
 test: off
 artifacts:
 - path: build/SoftHSMv2-$(Platform)
