--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -40,7 +40,8 @@ init:
     $env:RELEASE_DIR=Join-Path $env:BUILD_DIR "SoftHSMv2-$env:ENV_PLATFORM"
 
     $env:CONFIGURE_OPTIONS = "$env:CONFIGURE_OPTIONS with-crypto-backend=$env:CRYPTO_BACKEND with-$env:CRYPTO_BACKEND=$env:CRYPTO_PACKAGE_PATH\ with-cppunit=$env:CPPUNIT_PATH\"
-cache: C:/Tools/vcpkg/installed/
+cache: 
+  - C:/Tools/vcpkg/installed/
 environment:
   matrix:
   - CRYPTO_BACKEND: openssl
@@ -55,7 +56,7 @@ install:
 - cmd: vcpkg install getopt-win32:x86-windows
 build_script:
 - cmd: vcpkg integrate install
-- cmd: cmake -A Win32 -DCMAKE_TOOLCHAIN_FILE=C:/Tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DWITH_CRYPTO_BACKEND=%CRYPTO_BACKEND% -DBUILD_TESTS=ON  -DDISABLE_NON_PAGED_MEMORY=ON -DENABLE_GOST=OFF -DCPPUNIT_INCLUDE_DIR=C:/Tools/vcpkg/installed/x86-windows/include -DCPPUNIT_LIBRARY=C:/Tools/vcpkg/installed/x86-windows/lib/cppunit.lib .
+- cmd: cmake -A Win32 -DCMAKE_TOOLCHAIN_FILE=C:/Tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DWITH_CRYPTO_BACKEND=%CRYPTO_BACKEND% -DBUILD_TESTS=ON  -DDISABLE_NON_PAGED_MEMORY=ON -DENABLE_GOST=OFF .
 - cmd: cmake --build . --config RelWithDebInfo
 - cmd: ctest -C RelWithDebInfo
 - cmd: cmake -DCMAKE_INSTALL_PREFIX=build/SoftHSMv2-$(Platform) -DCMAKE_INSTALL_CONFIG_NAME=RelWithDebInfo -P cmake_install.cmake
