fix build script for CppUnit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,11 +80,33 @@ if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Default build type for SoftHSMv2 project" FORCE)
 endif(NOT CMAKE_BUILD_TYPE)
 
-message(STATUS "Build Configuration: ${CMAKE_BUILD_TYPE}")
 
-if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-	set(COMPILE_OPTIONS "/MP;/W4;/wd4996")
-endif()
+set(CMAKE_CXX_FLAGS_MAINTAINER "-Wall -Wabi" CACHE STRING
+ "Flags used by the C++ compiler during maintainer builds."
+  FORCE)
+set(CMAKE_C_FLAGS_MAINTAINER "-Wall -pedantic" CACHE STRING
+  "Flags used by the C compiler during maintainer builds."
+  FORCE)
+set(CMAKE_EXE_LINKER_FLAGS_MAINTAINER
+  "-Wl,--warn-unresolved-symbols,--warn-once" CACHE STRING
+  "Flags used for linking binaries during maintainer builds."
+  FORCE)
+set(CMAKE_SHARED_LINKER_FLAGS_MAINTAINER
+  "-Wl,--warn-unresolved-symbols,--warn-once" CACHE STRING
+  "Flags used by the shared libraries linker during maintainer builds."
+  FORCE)
+mark_as_advanced(
+  CMAKE_CXX_FLAGS_MAINTAINER
+  CMAKE_C_FLAGS_MAINTAINER
+  CMAKE_EXE_LINKER_FLAGS_MAINTAINER
+  CMAKE_SHARED_LINKER_FLAGS_MAINTAINER)
+
+set(CMAKE_BUILD_TYPE "${CMAKE_BUILD_TYPE}" CACHE STRING
+  "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel Maintainer."
+  FORCE)
+
+
+message(STATUS "Build Configuration: ${CMAKE_BUILD_TYPE}")
 
 # Build Modules Path
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
@@ -106,11 +128,17 @@ add_subdirectory(src)
 # p11-kit
 set(default_softhsm2_lib ${DEFAULT_PKCS11_LIB})
 configure_file(softhsm2.module.in softhsm2.module)
+
 if(ENABLE_P11_KIT)
     install(FILES ${PROJECT_BINARY_DIR}/softhsm2.module
             DESTINATION ${P11KIT_PATH}
             )
 endif(ENABLE_P11_KIT)
+
+#get_cmake_property(_variableNames VARIABLES)
+#foreach (_variableName ${_variableNames})
+#    message(STATUS "${_variableName}=${${_variableName}}")
+#endforeach()
 
 # Packaging
 set(CPACK_PACKAGE_NAME ${PACKAGE_NAME})
