--- a/src/lib/test/CMakeLists.txt
+++ b/src/lib/test/CMakeLists.txt
@@ -40,7 +40,13 @@ endif()
 include_directories(${INCLUDE_DIRS})
 
 add_executable(${PROJECT_NAME} ${SOURCES})
-target_link_libraries(${PROJECT_NAME} softhsm2-static ${CRYPTO_LIBS} ${CPPUNIT_LIBS} ${SQLITE3_LIBS})
+
+target_link_libraries(${PROJECT_NAME} 
+		softhsm2-static 
+		${SQLITE3_LIBS}	
+		CppUnit
+)
+
 target_compile_options(${PROJECT_NAME} PRIVATE ${COMPILE_OPTIONS})
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME}
