--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,7 +109,7 @@ set(CMAKE_BUILD_TYPE "${CMAKE_BUILD_TYPE}" CACHE STRING
 message(STATUS "Build Configuration: ${CMAKE_BUILD_TYPE}")
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-	set(CMAKE_CXX_FLAGS "/MP;/W4;/wd4996 ${CMAKE_CXX_FLAGS}")
+	set(CMAKE_CXX_FLAGS "/MP /W4 /wd4996 ${CMAKE_CXX_FLAGS}" CACHE STRING "" FORCE)
 endif()
 
 # Build Modules Path
