--- a/src/lib/data_mgr/test/CMakeLists.txt
+++ b/src/lib/data_mgr/test/CMakeLists.txt
@@ -8,7 +8,8 @@ set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/..
                  ${PROJECT_SOURCE_DIR}/../../pkcs11
                  ${PROJECT_SOURCE_DIR}/../../session_mgr
                  ${PROJECT_SOURCE_DIR}/../../slot_mgr
-                 ${CRYPTO_INCLUDES}
+                 ${CppUnit_INCLUDE_DIR}/..
+				 ${CRYPTO_INCLUDES}
                  )
 
 set(SOURCES datamgrtest.cpp
