fix cppunit handlemanager
fix remove vcpkg getopt

--- a/src/lib/handle_mgr/test/CMakeLists.txt
+++ b/src/lib/handle_mgr/test/CMakeLists.txt
@@ -9,6 +9,7 @@ set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/..
                  ${PROJECT_SOURCE_DIR}/../../pkcs11
                  ${PROJECT_SOURCE_DIR}/../../session_mgr
                  ${PROJECT_SOURCE_DIR}/../../slot_mgr
+				 ${CppUnit_INCLUDE_DIR}/..
                  )
 
 set(SOURCES handlemgrtest.cpp
