Limit number of sessions
When SoftHSMv2 is used for testing PKCS#11 client code
before hardware is available, maximum session count on
a token needs to be set in order to detects bugs in client
code where sessions are leaked and remain open. This
can cause problems since most hardware implementations
have a limit on opened sessions count.

This change sets a limit to general session count.

--- a/configure.ac
+++ b/configure.ac
@@ -158,6 +158,11 @@ AC_DEFINE_UNQUOTED(
 	[Minimum PIN length]
 )
 AC_DEFINE_UNQUOTED(
+	[MAX_SESSION_COUNT],
+	[16],
+	[Maximum session count]
+)
+AC_DEFINE_UNQUOTED(
 	[DEFAULT_SOFTHSM2_CONF],
 	["$default_softhsm2_conf"],
 	[The default location of softhsm2.conf]
