autoconf: Replace obsolete macro AC_CONFIG_HEADER
The macro AC_CONFIG_HEADERS (plural) should be used according to:
https://www.gnu.org/software/autoconf/manual/autoconf-2.61/autoconf.html#Configuration-Headers

--- a/configure.ac
+++ b/configure.ac
@@ -31,7 +31,7 @@ define([SOFTHSM_VERSION_REVISION], [5])
 # Init
 AC_PREREQ(2.61)
 AC_INIT([SoftHSM],[SOFTHSM_VERSION_MAJOR.SOFTHSM_VERSION_MINOR.SOFTHSM_VERSION_FIX[]PACKAGE_SUFFIX])
-AC_CONFIG_HEADER([config.h])
+AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_SRCDIR([src/Makefile.am])
 AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE([foreign subdir-objects])
