autoconf: Replace obsolete macro AC_PROG_LIBTOOL
AC_PROG_LIBTOOL was replaced by LT_INIT in libtool 2 in 2008.
https://www.gnu.org/software/libtool/manual/libtool.html#LT_005fINIT

--- a/configure.ac
+++ b/configure.ac
@@ -194,7 +194,7 @@ AC_SUBST([default_softhsm2_lib])
 
 # Generate the libtool script and install script
 AC_PROG_INSTALL
-AC_PROG_LIBTOOL
+LT_INIT
 
 # Generate the makefiles
 AC_CONFIG_FILES([
